# classic_computer_science_problems_in_rust

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
book/chapter_01/: bit_vectors.rs  calculate_pi.rs  compressed_gene.rs  fib1.rs  fib2.rs  fib3.rs  fib4.rs  fib5.rs  fib6.rs  hanoi.rs  unbreakable_encryption.rs
book/chapter_01/exercises/: hanoi_k_towers.rs
book/chapter_02/: dna_search.rs  generic_search.rs  maze.rs  maze2.rs  missionaries_and_cannibals.rs
book/chapter_02/exercises/: linear_binary_search_performance.rs  more_missionaries_and_cannibals.rs
book/chapter_03/: australian_map_colouring.rs  eight_queens.rs  eight_queens2.rs  send_more_money.rs  word_search.rs
book/chapter_04/: build_your_own_graph.rs
src/: csp.rs  gene.rs  generic_search.rs  lib.rs  main.rs  maze.rs
